<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Navigation labels -->
    <string name="title_log_in">LogIn</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_shoe_list">ShoeList</string>
    <string name="title_shoe_detail">ShoeDetail</string>
    <!-- LogIn labels -->
    <string name="log_in_ed_email_hint">Email</string>
    <string name="log_in_ed_password_hint">Password</string>
    <string name="log_in_btn_text">LogIn</string>
    <string name="log_in_btn_create_account_text">Create Account</string>
    <!-- Welcome labels -->
    <string name="welcome_txt_title_text">Welcome!</string>
    <string name="welcome_txt_subtitle_text">Here you will learn to develop profession android application with our tutorials, examples, tips and tricks, ux/ui design etc. These all tutorial and examples are available at free of cost. \n\nEither you are beginner or expert android developer we provide best tutorial and examples to you.</string>
    <string name="welcome_btn_text">Next</string>
    <!-- Instruction labels -->
    <string name="instruction_txt_title_text">Instruction!</string>
    <string name="instruction_txt_subtitle_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="instruction_btn_text">Next</string>
    <!-- ShowList labels -->
    <string name="show_list_fab_content_text">Add New</string>
    <string name="show_list_log_out_text">Logout</string>
    <string name="show_list_item_dummy_text">Show Item</string>
    <string name="show_list_log_out_cancel">Cancel</string>
    <string name="show_list_log_out_ok">OK</string>
    <string name="show_list_log_out_message">Are you sure you want to log out!</string>
    <!-- ShoeDetail labels -->
    <string name="shoe_detail_ed_name_hint">Shoe Name</string>
    <string name="shoe_detail_ed_company_hint">Company</string>
    <string name="shoe_detail_ed_size_hint">Shoe Size</string>
    <string name="shoe_detail_ed_desc_hint">Description</string>
    <string name="shoe_detail_btn_cancel_text">Cancel</string>
    <string name="shoe_detail_btn_add_text">Save</string>
</resources>