<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/logInFragment"
        android:name="com.udacity.shoestore.ui.login.LogInFragment"
        android:label="@string/title_log_in"
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_logInFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.welcome.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.ui.instructions.InstructionsFragment"
        android:label="@string/title_instructions"
        tools:layout="@layout/fragment_instructions" />
</navigation>