<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/ilPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_in_ed_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_high_type"
                android:textSize="@dimen/text_size_18"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_in_ed_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_high_type"
                android:textSize="@dimen/text_size_18"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_60"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:insetTop="@dimen/size_0"
            android:insetBottom="@dimen/size_0"
            android:text="@string/log_in_btn_text"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_60"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:insetTop="@dimen/size_0"
            android:insetBottom="@dimen/size_0"
            android:text="@string/log_in_btn_create_account_text"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>